apps/ecommerce/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ecommerce
  namespace: ecommerce

spec:
  replicas: 2

  selector:
    matchLabels:
      app: ecommerce

  template:
    metadata:
      labels:
        app: ecommerce

    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: ecommerce
          image: ghcr.io/rasolonjanahary/e-commerce:latest
          imagePullPolicy: Always

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
