apps/ecommerce/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce
  namespace: ecommerce

spec:
  type: ClusterIP
  selector:
    app: ecommerce
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
